--- a/code/app/src/main/res/layout/fragment_user_sign_up.xml
+++ b/code/app/src/main/res/layout/fragment_user_sign_up.xml
@@ -5,79 +5,132 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_user_sign_up_layout"
-    tools:context=".view.UserLoginFrag">
+    tools:context=".view.UserLoginFrag"
+    android:background="@color/black_background">
 
-    <!-- TODO: Update blank fragment layout -->
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="340dp"
-        android:background="@color/black"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textView_UserSignUpFrag_apptitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:fontFamily=""
+        android:text="Moods"
+        android:textColor="?attr/colorOnPrimary"
+        android:textSize="90sp"
+        android:textStyle="bold"
+        app:fontFamily="sans-serif-black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/button_UserSignUpFrag_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_white_back_button" />
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/button_UserSignUpFrag_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_white_back_button" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_UserSignUpFrag_createandlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/primary_blue"
         android:text="@string/create_account_and_login"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintTop_toBottomOf="@+id/textField_UserSignUpFrag_reEnterPassword" />
 
-    <EditText
-        android:id="@+id/editText_UserSignUpFrag_username"
+    <!-- Input username -->
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textView_UserLoginInFrag_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/username_user_sign_up"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/button_UserSignUpFrag_createandlogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.221" />
+        android:layout_marginTop="150dp"
+        android:text="Sign up"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/textField_UserSignUpFrag_username"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/textField_UserSignUpFrag_username"
+        app:layout_constraintTop_toBottomOf="@+id/textView_UserSignUpFrag_apptitle" />
 
-    <EditText
-        android:id="@+id/editText_UserSignUpFrag_password"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textField_UserSignUpFrag_username"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/password_user_sign_up"
-        android:inputType="textPassword"
+        android:hint="@string/username_user_login"
+
+        app:boxStrokeColor="@color/selector"
+        app:cursorColor="@color/selector"
+        app:hintTextColor="@color/selector"
+
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_UserSignUpFrag_username" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_UserLoginInFrag_title">
 
-    <EditText
-        android:id="@+id/editText_UserSignUpFrag_reEnterPassword"
-        android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editText_UserSignUpFrag_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:ems="10"
+            android:inputType="text"
+            android:textColor="@color/white" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Input password-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textField_UserSignUpFrag_password"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/password_user_login"
+
+        app:boxStrokeColor="@color/selector"
+        app:hintTextColor="@color/selector"
+        app:cursorColor="@color/selector"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textField_UserSignUpFrag_username"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editText_UserSignUpFrag_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Re-enter input password-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textField_UserSignUpFrag_reEnterPassword"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="@string/re_enter_password"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_UserSignUpFrag_password" />
 
+        app:boxStrokeColor="@color/selector"
+        app:hintTextColor="@color/selector"
+        app:cursorColor="@color/selector"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textField_UserSignUpFrag_password"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editText_UserSignUpFrag_reEnterPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textColor="@color/white"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <!-- back button above -->
 
