--- a/code/app/src/main/res/layout/activity_view_comments.xml
+++ b/code/app/src/main/res/layout/activity_view_comments.xml
@@ -38,13 +38,14 @@
         app:layout_constraintTop_toTopOf="@+id/textview_ActivityViewComments_title"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textview_ActivityViewComments_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="monospace"
         android:text="Comments"
+        app:fontFamily="sans-serif-black"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/imagebutton_ActivityViewComments_addcommentsbutton"
