--- a/code/app/src/main/res/layout/fragment_follower_request.xml
+++ b/code/app/src/main/res/layout/fragment_follower_request.xml
@@ -8,12 +8,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.FollowerRequestFrag">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textview_FollowerRequestFrag_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
         android:text="Follow Requests"
+        app:fontFamily="sans-serif-black"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:layout_margin="6dp"
@@ -35,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@color/primary_blue"
+        app:backgroundTint="@color/primary_blue"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
