--- a/code/app/src/main/res/layout/fragment_follower_layout.xml
+++ b/code/app/src/main/res/layout/fragment_follower_layout.xml
@@ -15,13 +15,14 @@
         android:layout_height="wrap_content"
         android:text="Username"
         android:textColor="@android:color/white"
+        app:fontFamily="sans-serif-black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_FragmentFollowerLayout_acceptButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,7 +33,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button_FragmentFollowerLayout_declineButton"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_FragmentFollowerLayout_declineButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
