--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".view.HomeMyMoodsFrag">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_HomeMyMoodsFragment_userrecyclerview"
         android:layout_width="0dp"
@@ -17,7 +16,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
@@ -26,7 +24,6 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/dropDownMenuLayout"
@@ -40,43 +37,47 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <AutoCompleteTextView
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/autoCompleteTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="none"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView_HomeMyMoodsFragment"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_layout"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/light_grey"
-            android:focusable="true"
-            android:clickable="true"
-            android:iconifiedByDefault="false"
+            android:hint="Search moods"
+            app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionSearch"
+                android:inputType="text"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/checkBox_HomeMyMoodsFragment_recentWeek"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Recent Week"
+            android:text="@string/recent_week"
             android:textColor="@android:color/white"
             android:buttonTint="@android:color/white"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/searchView_HomeMyMoodsFragment"
+            app:layout_constraintTop_toBottomOf="@id/search_layout"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
@@ -91,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="Welcome Username"
+            android:text="@string/welcome_username_home_moods"
             android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -110,7 +111,6 @@
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton_HomeMyMoodsFragment_addmood"
         android:layout_width="wrap_content"
@@ -120,5 +120,4 @@
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
