--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/custom_background_color"
     tools:context=".view.HomeMyMoodsFrag">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -32,7 +33,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:hint="Filter by mood"
             app:boxBackgroundColor="@color/light_grey"
+            app:boxStrokeColor="@color/primary_blue"
+            app:hintTextColor="@color/primary_blue"
+            app:endIconTint="@color/primary_blue"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -41,7 +46,9 @@
                 android:id="@+id/autoCompleteTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="none"/>
+                android:inputType="none"
+                android:textColor="@color/custom_text_primary"
+                android:textSize="16sp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -52,6 +59,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:hint="Search moods"
+            app:boxBackgroundColor="@color/light_grey"
+            app:boxStrokeColor="@color/primary_blue"
+            app:hintTextColor="@color/primary_blue"
+            app:endIconTint="@color/primary_blue"
             app:endIconMode="clear_text"
             app:layout_constraintTop_toBottomOf="@id/dropDownMenuLayout"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +73,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionSearch"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:textColor="@color/custom_text_primary"
+                android:textSize="16sp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -70,8 +83,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recent_week"
-            android:textColor="@android:color/white"
-            android:buttonTint="@android:color/white"
+            android:textColor="@color/custom_text_primary"
+            android:buttonTint="@color/primary_blue"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/search_layout"
@@ -83,6 +96,7 @@
         android:id="@+id/constraintLayout3"
         android:layout_width="0dp"
         android:layout_height="70dp"
+        android:background="@color/primary_blue"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -94,7 +108,7 @@
             android:layout_marginStart="20dp"
             android:text="@string/welcome_username_home_moods"
             android:textColor="@color/white"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -115,9 +129,10 @@
         android:id="@+id/floatingActionButton_HomeMyMoodsFragment_addmood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/primary_blue"
-        android:src="@drawable/ic_add"
+        android:layout_margin="16dp"
+        app:backgroundTint="@color/primary_blue"
+        app:tint="@color/white"
+        app:srcCompat="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
