--- a/code/app/src/main/res/layout/fragment_home_my_moods.xml
+++ b/code/app/src/main/res/layout/fragment_home_my_moods.xml
@@ -33,10 +33,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:hint="Filter by mood"
-            app:boxBackgroundColor="@color/light_grey"
-            app:boxStrokeColor="@color/primary_blue"
-            app:hintTextColor="@color/primary_blue"
+            android:hint="Filter by Mood"
+            app:boxBackgroundColor="@color/black_background"
+            app:boxStrokeColor="@color/white"
+            app:hintTextColor="@color/white"
             app:endIconTint="@color/primary_blue"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,10 +45,14 @@
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/autoCompleteTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none"
+                android:layout_height="50dp"
+                android:padding="12dp"
                 android:textColor="@color/custom_text_primary"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:dropDownHeight="wrap_content"
+                android:dropDownVerticalOffset="8dp"
+                android:popupBackground="@color/white"
+                android:popupElevation="6dp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
